--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>SkibidiIDE - No Cap FR FR 💀</title>
+    <title>Welcome to Slopify - No Cap FR FR 💀</title>
     <style>
         * {
             margin: 0;
@@ -578,7 +578,7 @@
                 
                 <div class="editor-wrapper">
                     <div class="line-numbers" id="lineNumbers">1</div>
-                    <textarea id="editor" spellcheck="false">// Welcome to SkibidiIDE fr fr no cap 💀
+                    <textarea id="editor" spellcheck="false">// Welcome to Slopify fr fr no cap 💀
 // This IDE is bussin on god
 
 function sigmaMale() {
