--- a/frontend/index.html
+++ b/frontend/index.html
@@ -74,6 +74,10 @@
                                 style="flex: 1; padding: 4px; font-size: 11px; background: #3c3c3c; border: 1px solid #555; min-width: 45px;">
                             🎮 Twitch
                         </button>
+                        <button class="platform-tab" onclick="switchPlatform('terminal')" data-platform="terminal"
+                                style="flex: 1; padding: 4px; font-size: 11px; background: #3c3c3c; border: 1px solid #555; min-width: 45px;">
+                            💻 Terminal
+                        </button>
                     </div>
 
                     <!-- YouTube Panel -->
@@ -227,6 +231,33 @@
                             </button>
                         </div>
                     </div>
+
+                    <!-- Terminal Panel -->
+                    <div id="terminalPanel" class="platform-panel" style="display: none;">
+                        <div style="margin-bottom: 8px; text-align: center;">
+                            <h3 style="color: #4caf50; margin-bottom: 8px;">💻 Terminal</h3>
+                        </div>
+
+                        <div id="terminalOutput" style="background: #000; color: #4caf50; padding: 12px; font-family: 'Consolas', 'Monaco', monospace; font-size: 12px; height: 300px; overflow-y: auto; border: 1px solid #4caf50; border-radius: 4px; margin-bottom: 8px; line-height: 1.6;">
+                            <div style="color: #858585;">Slopify Terminal v1.0.0</div>
+                            <div style="color: #858585;">Type 'help' for available commands fr fr 💀</div>
+                            <div style="color: #858585;">---</div>
+                        </div>
+
+                        <div style="display: flex; gap: 4px;">
+                            <span style="color: #4caf50; font-family: 'Consolas', 'Monaco', monospace; font-size: 12px;">$</span>
+                            <input type="text" id="terminalInput" placeholder="Enter command..."
+                                   style="flex: 1; padding: 6px; background: #1e1e1e; border: 1px solid #4caf50; color: #4caf50; font-family: 'Consolas', 'Monaco', monospace; font-size: 12px; border-radius: 3px;"
+                                   onkeydown="if(event.key==='Enter') executeCommand()">
+                            <button onclick="executeCommand()" style="background: #4caf50; border: none; color: #000; padding: 6px 12px; font-weight: bold; border-radius: 3px; cursor: pointer;">
+                                Run
+                            </button>
+                        </div>
+
+                        <button onclick="clearTerminal()" style="width: 100%; margin-top: 8px; background: #f44336; border: none; color: white; padding: 6px; border-radius: 3px; font-size: 11px;">
+                            Clear Terminal
+                        </button>
+                    </div>
                 </div>
             </div>
 
@@ -240,7 +271,7 @@
 
                 <div class="editor-wrapper">
                     <div class="line-numbers" id="lineNumbers">1</div>
-                    <textarea id="editor" spellcheck="false">// Welcome to SkibidiIDE fr fr no cap 💀
+                    <textarea id="editor" spellcheck="false">// Welcome to Slopify fr fr no cap 💀
 // This IDE is bussin on god
 
 function sigmaMale() {
