--- a/frontend/index.html
+++ b/frontend/index.html
@@ -78,6 +78,10 @@
                                 style="flex: 1; padding: 4px; font-size: 11px; background: #3c3c3c; border: 1px solid #555; min-width: 45px;">
                             💻 Terminal
                         </button>
+                        <button class="platform-tab" onclick="switchPlatform('snake')" data-platform="snake"
+                                style="flex: 1; padding: 4px; font-size: 11px; background: #3c3c3c; border: 1px solid #555; min-width: 45px;">
+                            🐍 Snake
+                        </button>
                     </div>
 
                     <!-- YouTube Panel -->
@@ -256,6 +260,29 @@
 
                         <button onclick="clearTerminal()" style="width: 100%; margin-top: 8px; background: #f44336; border: none; color: white; padding: 6px; border-radius: 3px; font-size: 11px;">
                             Clear Terminal
+                        </button>
+                    </div>
+
+                    <!-- Snake Game Panel -->
+                    <div id="snakePanel" class="platform-panel" style="display: none;">
+                        <div style="margin-bottom: 8px; text-align: center;">
+                            <h3 style="color: #4caf50; margin-bottom: 8px;">🐍 Snake Game</h3>
+                            <div style="font-size: 11px; color: #858585;">Use arrow keys to play</div>
+                        </div>
+
+                        <canvas id="snakeCanvas" width="200" height="200" style="width: 100%; background: #000; border: 2px solid #4caf50; border-radius: 4px; image-rendering: pixelated;"></canvas>
+
+                        <div style="margin-top: 8px; display: flex; justify-content: space-between; font-size: 12px;">
+                            <div>Score: <span id="snakeScore" style="color: #4caf50; font-weight: bold;">0</span></div>
+                            <div>High: <span id="snakeHigh" style="color: #ffd93d; font-weight: bold;">0</span></div>
+                        </div>
+
+                        <button onclick="startSnake()" id="snakeStartBtn" style="width: 100%; margin-top: 8px; background: #4caf50; border: none; color: white; padding: 10px; font-weight: bold; border-radius: 4px;">
+                            🎮 Start Game
+                        </button>
+
+                        <button onclick="pauseSnake()" id="snakePauseBtn" style="width: 100%; margin-top: 8px; background: #ffd93d; border: none; color: #000; padding: 10px; font-weight: bold; border-radius: 4px; display: none;">
+                            ⏸️ Pause
                         </button>
                     </div>
                 </div>
